--- a/public/html/editor/primaryEdits.html
+++ b/public/html/editor/primaryEdits.html
@@ -1,20 +1,24 @@
 <template x-if="$store.edit.invoiceViewMode === 'editParent'">
   <div class="fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50">
     <!-- Modal Container -->
-    <div class="bg-white dark:bg-vdp shadow-lg w-[80%] max-h-[90%] flex flex-col">
+    <div class="shadow-lg w-[80%] max-h-[90%] flex flex-col">
       <header
         x-text="'Edit Invoice – ' + $store.edit.currentInvoice.invoice_number"
-        class="p-4 bg-vls3 dark:bg-vdp border-b border-vls/40 w-full text-xl font-medium text-vlp dark:text-vds text-center"></header>
+        class="p-4 bg-vls3 dark:bg-vdp border border-vls/40 !rounded-t w-full text-xl font-medium text-vlp dark:text-vds text-center"></header>
       <main
         x-data="primaryEditsModal()"
         x-init="init(); existingGet(); invoiceGet()"
-        class="flex-grow overflow-y-auto p-4 min-h-0 h-full bg-vlp dark:bg-vdp2">
+        class="flex-grow overflow-y-auto p-4 min-h-0 h-full bg-vlp dark:bg-vdp2 alt-table-scrollbar">
         <section class="mb-8">
-          <h2 class="text-lg font-semibold mb-2">Existing Items (Styles & Samples)</h2>
-          <input type="text" placeholder="Search existing items..." class="srch-style mb-3" x-model="searchQuery" />
+          <div class="flex justify-between items-center">
+            <input type="text" placeholder="Search existing items..." class="srch-style mb-3" x-model="searchQuery" />
+            <h2 class="text-lg font-medium mb-2 text-vds2 dark:text-vds underline decoration-vla dark:decoration-vda">
+              Existing Items (Styles & Samples)
+            </h2>
+          </div>
 
           <div class="flex items-center gap-4 mb-1 w-full">
-            <span class="w-[40%]">Name</span>
+            <span class="w-[40%] pl-2">Name</span>
             <span class="w-[10%]">Type</span>
             <span class="w-[10%]">Price</span>
             <span class="w-[10%]">Time</span>
@@ -22,13 +26,17 @@
           </div>
           <hr />
 
-          <!-- Scrollable "table" body container -->
+          <!-- 
+          Scrollable "table" body container 
+          needs quantity input adding correctly to the invoice
+
+          -->
           <div class="max-h-[20vh] overflow-y-auto alt-table-scrollbar">
             <template
               x-for="(item, index) in existing"
               :key="item.id ? `existing-${item.id}-${index}` : `existing-noid-${index}`">
               <div
-                class="flex items-center gap-4 my-1 w-full dark:bg-vds3neu700 bg-blue-50 border border-vls/40 rounded alt-table-scrollbar">
+                class="flex items-center gap-4 my-1 w-full dark:bg-vds3neu700 bg-blue-50 border border-vls/40 rounded alt-table-scrollbar text-vls2 dark:text-vds3light">
                 <span x-text="item.name" class="w-[40%] ml-2"></span>
                 <span x-text="item.type" class="w-[10%]"></span>
                 <span x-text="'£'+item.price" class="w-[10%]"></span>
@@ -49,16 +57,22 @@
           </div>
         </section>
 
-        <!-- 2) Invoice Items Table -->
+        <!-- 2) Invoice Items Table 
+          needs quantity appending to workk 
+        -->
         <section>
-          <h2 class="text-lg font-semibold mb-2">Current Invoice Items</h2>
           <!-- 
-            We read directly from Alpine.store('edit').currentInvoice.items 
-            but reference it in the template for convenience. 
-            Each item must have a unique key. We use item.frontendId if set, 
-            or fallback to "invoice-${item.id}" if you like.
-          -->
-          <input type="text" placeholder="Search existing items..." class="srch-style mb-3" x-model="searchQuery2" />
+          We read directly from Alpine.store('edit').currentInvoice.items 
+          but reference it in the template for convenience. 
+          Each item must have a unique key. We use item.frontendId if set, 
+          or fallback to "invoice-${item.id}" if you like.
+        -->
+          <div class="flex justify-between items-center">
+            <input type="text" placeholder="Search existing items..." class="srch-style mb-3" x-model="searchQuery2" />
+            <h2 class="text-lg font-medium mb-2 text-vds2 dark:text-vds underline decoration-vla dark:decoration-vda">
+              Current Invoice Items
+            </h2>
+          </div>
           <div class="flex items-center gap-4 mb-1 w-full">
             <span class="w-[40%]">Name</span>
             <span class="w-[10%]">Type</span>
@@ -77,7 +91,7 @@
           <div class="max-h-[20vh] overflow-y-auto alt-table-scrollbar">
             <template x-for="(invItem, index) in invoice" :key="invItem.frontendId || `invoice-${invItem.id}`">
               <div
-                class="flex items-center gap-4 my-1 w-full dark:bg-vds3neu700 bg-blue-50 border border-vls/40 rounded alt-table-scrollbar">
+                class="flex items-center gap-4 my-1 w-full dark:bg-vds3neu700 bg-blue-50 border border-vls/40 rounded alt-table-scrollbar text-vls2 dark:text-vds3light">
                 <span x-text="invItem.name" class="w-[40%] ml-2"></span>
                 <span x-text="invItem.type" class="w-[10%]"></span>
                 <span x-text="'x'+invItem.quantity" class="w-[10%]"></span>
@@ -466,7 +480,7 @@
           </template>
         </section>
       </main>
-      <footer class="flex justify-between items-center p-4 bg-vls3 dark:bg-vdp border-t border-vls/40">
+      <footer class="flex justify-between items-center p-4 bg-vls3 dark:bg-vdp border rounded-b border-vls/40">
         <div class="flex items-end justify-between gap-2 w-full mb-0.5">
           <div x-data="tooltip('Close modal and revert any changes', { position: 'top' })">
             <button @click="$store.edit.cancelEdit();" class="btn-sec">Cancel</button>
