--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
           </button>
           <!-- EDITOR -->
           <button
-            @click="tabButtonClicked('editorMain')"
-            :class="tabContentActive('editorMain') ? 'tab-button-active' : 'tab-button'">
+            @click="tabButtonClicked('invoiceBook')"
+            :class="tabContentActive('invoiceBook') ? 'tab-button-active' : 'tab-button'">
             <div x-show="sideBar" class="flex p-2">
               <svg class="mr-1.5 size-5">
                 <use href="/icons/icons.svg#editor" />
@@ -343,9 +343,6 @@
     <script type="module" src="/store/tossStore.js"></script>
     <script type="module" src="/store/utils/effects.js"></script>
     <script type="module" src="/store/customConfirm.js"></script>
-    <!-- <script type="module" src="/Managers/invoEditor/primaryEditsModal.js"></script>
-    <script type="module" src="/Managers/invoEditor/copyEditsModal.js"></script>
-    <script type="module" src="/Managers/invoEditor/editView.js"></script> -->
     <script type="module" src="/store/utils/datePicker.js"></script>
 
     <!-- 2) Then app.js, which sets up tabManager and etc -->
